Resolved merge conflicts(lab2)