@@ -1,9 +1,13 @@
 package com.gallery.catalog.service;
 
 import com.gallery.catalog.dto.PaintingDto;
+import com.gallery.catalog.exception.PaintingNotFoundException;
+import com.gallery.catalog.exception.UserNotFoundException;
 import com.gallery.catalog.model.Painting;
 import com.gallery.catalog.model.Tag;
+import com.gallery.catalog.model.User;
 import com.gallery.catalog.repository.PaintingRepository;
+import com.gallery.catalog.repository.UserRepository;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
@@ -13,12 +17,14 @@ import org.springframework.transaction.annotation.Transactional;
 public class PaintingService {
 
     private final PaintingRepository paintingRepository;
+    private final UserRepository userRepository;
 
-    public PaintingService(PaintingRepository paintingRepository) {
+    public PaintingService(PaintingRepository paintingRepository,
+                           UserRepository userRepository) {
         this.paintingRepository = paintingRepository;
+        this.userRepository = userRepository;
     }
 
-    // ✅ Конвертация Entity → DTO
     private PaintingDto convertToDto(Painting painting) {
         PaintingDto dto = new PaintingDto();
         dto.setId(painting.getId());
@@ -47,46 +53,26 @@ public class PaintingService {
         return dto;
     }
 
-    // ✅ GET все картины (без N+1)
     public List<PaintingDto> getAllPaintings() {
         return paintingRepository.findAllByOrderByCreatedAtDesc()
             .stream()
             .map(this::convertToDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    // ✅ GET по ID
     public PaintingDto getPaintingById(Long id) {
         Painting painting = paintingRepository.findWithDetailsById(id)
-            .orElseThrow(() -> new RuntimeException("Painting not found with id: " + id));
+            .orElseThrow(() -> new PaintingNotFoundException(id));
         return convertToDto(painting);
     }
 
-    // ✅ GET по художнику
     public List<PaintingDto> getPaintingsByArtist(String artist) {
         return paintingRepository.findByArtistContainingIgnoreCase(artist)
             .stream()
             .map(this::convertToDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    // ✅ GET по художнику со всеми деталями
-    public List<PaintingDto> getPaintingsByArtistWithDetails(String artist) {
-        return paintingRepository.findByArtistWithDetails(artist)
-            .stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-    }
-
-    // ⚠️ Демонстрация проблемы N+1
-    public List<PaintingDto> getPaintingsWithNplus1Problem() {
-        return paintingRepository.findAll()
-            .stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-    }
-
-    // ✅ CREATE
     @Transactional
     public PaintingDto createPainting(PaintingDto dto) {
         Painting painting = new Painting();
@@ -98,15 +84,20 @@ public class PaintingService {
         painting.setImageUrl(dto.getImageUrl());
         painting.setTechnique(dto.getTechnique());
 
+        if (dto.getUserName() != null) {
+            User user = userRepository.findByUsername(dto.getUserName())
+                .orElseThrow(() -> new UserNotFoundException(dto.getUserName()));
+            painting.setUser(user);
+        }
+
         Painting saved = paintingRepository.save(painting);
         return convertToDto(saved);
     }
 
-    // ✅ UPDATE
     @Transactional
     public PaintingDto updatePainting(Long id, PaintingDto dto) {
         Painting painting = paintingRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Painting not found with id: " + id));
+            .orElseThrow(() -> new PaintingNotFoundException(id));
 
         painting.setTitle(dto.getTitle());
         painting.setDescription(dto.getDescription());
@@ -120,11 +111,10 @@ public class PaintingService {
         return convertToDto(updated);
     }
 
-    // ✅ DELETE
     @Transactional
     public void deletePainting(Long id) {
         if (!paintingRepository.existsById(id)) {
-            throw new RuntimeException("Painting not found with id: " + id);
+            throw new PaintingNotFoundException(id);
         }
         paintingRepository.deleteById(id);
     }
